--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,9 +14,11 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/section1.html"></include>
-    <include src="./partials/section2.html"></include>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/section1.html"></include>
+      <include src="./partials/section2.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
