--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,6 +24,7 @@
       <include src="./partials/hero.html"></include>
       <include src="./partials/section-1.html"></include>
       <include src="./partials/section-2.html"></include>
+      <include src="./partials/section-special-offer.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
   </body>
